--- a/Application Building/index.html
+++ b/Application Building/index.html
@@ -83,7 +83,7 @@
     
 </body>
 <footer>
-       <center> <p>© 2022 Balajee A V</p> </center>
+       <center> <p></p> </center>
     </footer>
 </html>
 
